--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -1,5 +1,4 @@
 @use "./theme.scss" as theme;
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -82,7 +81,6 @@ body:not(.device-macos) {
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    //overflow-x: hidden;
     position: relative; // squashes react-laag warning
 }
 
@@ -120,11 +118,12 @@ body::before {
     height: 80vmin;
 
     --pure: 0; // black = light
-    background-image: radial-gradient(
-        circle at 50% 0,
-        rgba(var(--pure), var(--pure), var(--pure), 0.025) 0%,
-        rgba(var(--pure), var(--pure), var(--pure), 0) 40%
-    );
+    background-image:
+        radial-gradient(
+            circle at 50% 0,
+            rgba(var(--pure), var(--pure), var(--pure), 0.025) 0%,
+            rgba(var(--pure), var(--pure), var(--pure), 0) 40%
+        );
     background-repeat: no-repeat;
     background-size: contain;
 
