--- a/frontend/src/components/Scratch/DecompilePanel.module.scss
+++ b/frontend/src/components/Scratch/DecompilePanel.module.scss
@@ -31,7 +31,7 @@
 
     border-top: 1px solid var(--g300);
 
-    @media screen and (max-height: 600px) {
+    @media screen and (height <= 600px) {
         height: 200px;
     }
 
