Change to use Blue text in diffs, instead of light cyan
Light cyan is hard to see on a white background, let alone read. Blue is a good replacement for now. Longer term, might be good to look into if there is an optimal set of colors for distinguishability. Blue looks moderately similar to rgb(103, 106, 255) which is used for rotation4.

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -129,7 +129,7 @@
 .rotation3 { color: red; }
 .rotation4 { color: rgb(103, 106, 255); }
 .rotation5 { color: lightpink; }
-.rotation6 { color: lightcyan; }
+.rotation6 { color: blue; }
 .rotation7 { color: lightgreen; }
 .rotation8 { color: grey; }
 
