--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -124,15 +124,15 @@
 .source_other { font-style: italic; }
 .source_line_num { font-style: italic; }
 
-.rotation0 { color: rgb(205,82,82); }
-.rotation1 { color: rgb(205,164,82); }
-.rotation2 { color: rgb(164,205,82); }
-.rotation3 { color: rgb(82,205,82); }
-.rotation4 { color: rgb(82,205,164); }
-.rotation5 { color: rgb(82,164,205); }
-.rotation6 { color: rgb(82,82,205); }
-.rotation7 { color: rgb(164,82,205); }
-.rotation8 { color: rgb(205,82,164); }
+.rotation0 { color: rgb(205, 82, 82); }
+.rotation1 { color: rgb(205, 164, 82); }
+.rotation2 { color: rgb(164, 205, 82); }
+.rotation3 { color: rgb(82, 205, 82); }
+.rotation4 { color: rgb(82, 205, 164); }
+.rotation5 { color: rgb(82, 164, 205); }
+.rotation6 { color: rgb(82, 82, 205); }
+.rotation7 { color: rgb(164, 82, 205); }
+.rotation8 { color: rgb(205, 82, 164); }
 
 .highlighted {
     color: white;
