--- a/packages/app/src/theme.scss
+++ b/packages/app/src/theme.scss
@@ -21,10 +21,10 @@
 
         @if color.blackness($bg) > 50% {
             // Dark
-            --g#{$i * 50}: #{hsl(color.hue($bg), 0, ($i - 1) * $multiplier)};
+            --g#{$i * 50}: #{hsl(color.hue($bg), 0%, ($i - 1) * $multiplier)};
         } @else {
             // Light
-            --g#{$i * 50}: #{hsl(color.hue($bg), 0, 100% - ($i - 1) * $multiplier)};
+            --g#{$i * 50}: #{hsl(color.hue($bg), 0%, 100% - ($i - 1) * $multiplier)};
         }
     }
 
