--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -133,6 +133,18 @@
 .rotation7 { color: lightgreen; }
 .rotation8 { color: grey; }
 
+:global(html:not(.dark)) {
+    .rotation0 { color: rgb(205, 82, 82); } // hsv(0° 60% 80%)
+    .rotation1 { color: rgb(205, 164, 82); } // hsv(40° 60% 80%)
+    .rotation2 { color: rgb(164, 205, 82); } // hsv(80° 60% 80%)
+    .rotation3 { color: rgb(82, 205, 82); } // hsv(120° 60% 80%)
+    .rotation4 { color: rgb(82, 205, 164); } // hsv(160° 60% 80%)
+    .rotation5 { color: rgb(82, 164, 205); } // hsv(200° 60% 80%)
+    .rotation6 { color: rgb(82, 82, 205); } // hsv(240° 60% 80%)
+    .rotation7 { color: rgb(164, 82, 205); } // hsv(280° 60% 80%)
+    .rotation8 { color: rgb(205, 82, 164); } // hsv(320° 60% 80%)
+}
+
 .highlighted {
     color: white;
     background-color: #aa8b00;
