Don't empty the bar on failed compilations, color scaling

--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -69,5 +69,5 @@
     background-color: #a855f7;
     width: 100%;
     height: 100%;
-    transition: transform 660ms cubic-bezier(0.65, 0, 0.35, 1);
+    transition: 660ms cubic-bezier(0.65, 0, 0.35, 1);
 }
