Fix nested anchor in Scratch Toolbar breadcrumb

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -124,12 +124,8 @@ $padding: 4px;
 
 .iconNamePair {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     gap: 4px;
-
-    > svg {
-        align-self: center;
-    }
 }
 
 .lastEditTime {
