Three-way diffs (#1147)
* Misc cleanups

* Three-way diffs

Fixes #93.

* Setting for three-way diffing mode

* fixes

* Error checking

* wording

* fix

* Help text

* Style the 2/3 button

* yarn lint

* make a smidge smaller

* make the 2/3 a tiny bit smaller

* Add -3/-b flag to editor settings

---------

Co-authored-by: Mark Street <streetster@gmail.com>

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -32,6 +32,32 @@
     user-select: none;
 }
 
+.spacer {
+    flex: 1;
+}
+
+.threeWayToggle {
+    position: relative;
+    padding: 4px 4px;
+    cursor: pointer;
+
+    &:hover {
+        border-radius: 4px;
+        color: var(--g1300);
+        background: var(--g400);
+    }
+}
+
+.threeWayToggleNumber {
+    position: absolute;
+    top: 27%;
+    left: 51%;
+
+    font-size: 0.7rem;
+
+    color: var(--g1500);
+}
+
 // Columns
 .headers,
 .row {
