Added label coloring to fix light theme search labels

--- a/frontend/src/components/Editor/CodeMirror.module.scss
+++ b/frontend/src/components/Editor/CodeMirror.module.scss
@@ -133,5 +133,9 @@
         input[type="checkbox"] {
             vertical-align: middle;
         }
+
+        label {
+            color: var(--a800);
+        }
     }
 }
