Use same blue for diff vertical splitter as horizontal splits

--- a/frontend/src/components/Diff/DragBar.module.scss
+++ b/frontend/src/components/Diff/DragBar.module.scss
@@ -22,3 +22,10 @@
         transform: translateX(-50%);
     }
 }
+
+.active {
+    &::after {
+        width: 4px;
+        background: #007fd4;
+    }
+}
