--- a/frontend/src/components/Scratch/Comments.module.scss
+++ b/frontend/src/components/Scratch/Comments.module.scss
@@ -1,18 +1,53 @@
-.textInput {
+.holder {
+    height: 100%;
+    position: relative;
+}
+
+.inputSection {
     width: 100%;
-    padding: 8px 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: contents;
 
-    color: var(--g1200);
-    background: var(--g200);
-    font: 0.8rem var(--monospace);
-    border: 1px solid var(--g500);
-    border-radius: 4px;
+    form {
+        width: 100%;
 
-    outline: none !important;
+        textarea {
+            appearance: none;
+            width: 100%;
+            padding: 8px 10px;
+            height: 33px;
+            color: var(--g1200);
+            background: var(--g200);
+            font: 0.8rem var(--monospace);
+            border: 1px solid var(--g500);
+            border-radius: 4px;
+            bottom: 0;
+            left: 0;
+            padding-right: 2em;
+            outline: none !important;
+            overflow: hidden;
+            resize: none;
 
-    &::-webkit-input-placeholder {
-        color: var(--g700);
+            &::-webkit-input-placeholder {
+                color: var(--g700);
+            }
+        }
     }
+
+    .submit {
+        position: absolute;
+        border: none;
+        transform: translateY(-15%);
+        right: 0;
+        bottom: 0;
+    }
+}
+
+.commentsBody {
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .metadata {
@@ -20,7 +55,25 @@
     padding-left: 5px;
     color: var(--g900);
 
-    > span {
+    >span {
         flex-grow: 1;
     }
+}
+
+.text {
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+}
+
+.refresh {
+    position: fixed;
+    z-index: 2;
+}
+
+.counter {
+    float: right;
+    line-height: 1.25rem;
+    padding-bottom: 4px;
+    font: 0.8rem var(--monospace);
+    color: var(--g1200);
 }
