--- a/frontend/src/components/Dropdown.module.scss
+++ b/frontend/src/components/Dropdown.module.scss
@@ -22,7 +22,8 @@
         color: var(--g1600);
         background: var(--g200);
         border-radius: 5px;
-
+        padding-right: 3px;
+        padding-left: 3px;
         width: 100%;
     }
 
