Allow scratch name to be highlighted and copied for non-owners (#1359)
* Add scratchName class to allow highlighting and copying the scratch name

* Use .name to allow selecting scratch name

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -51,9 +51,8 @@ $padding: 4px;
 
     text-align: center;
 
-    &.editable {
-        cursor: text;
-    }
+    cursor: text;
+    user-select: text;
 
     &[contenteditable] {
         text-overflow: initial;
