Make symbols readable for non-dark theme.

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -171,6 +171,7 @@
     .rotation6 { color: rgb(82, 82, 205); } // hsv(240° 60% 80%)
     .rotation7 { color: rgb(164, 82, 205); } // hsv(280° 60% 80%)
     .rotation8 { color: rgb(205, 82, 164); } // hsv(320° 60% 80%)
+    .symbol { color: black }
 }
 
 .highlighted {
