Add warning if user is creating scratch with the same name as an existing one

--- a/frontend/src/app/(navfooter)/new/new.module.scss
+++ b/frontend/src/app/(navfooter)/new/new.module.scss
@@ -113,3 +113,14 @@
         }
     }
 }
+
+.duplicatesContainer {
+    font-size: 0.9rem;
+    margin-top: 1em;
+
+    padding: 2px 10px;
+}
+
+.duplicatesList {
+    padding-left: 1em;
+}
