Rename CompilerOpts to OptionsPanel and move it to the other panels

--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -43,11 +43,11 @@
     overflow: auto;
 }
 
-.compilerOptsTab {
+.optionsTab {
     overflow: auto;
 }
 
-.compilerOptsContainer {
+.optionsContainer {
     min-width: 400px;
 }
 
