'Loading' -> 'LoadingSpinner' consistency

--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -47,6 +47,10 @@
     overflow: auto;
 }
 
+.compilerOptsContainer {
+    min-width: 400px;
+}
+
 .progressbar {
     padding-left: 1em;
     padding-right: 1em;
