--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -138,11 +138,19 @@
     color: #969896;
 }
 
+.source_filename { font-weight: bold; }
+
 .diff_any { background-color: rgba(255, 255, 255, 0.02); }
+
 .diff_change { color: #6d6dff; }
 .diff_add { color: #45bd00; }
 .diff_remove { color: #c82829; }
-.source_filename { font-weight: bold; }
+
+:global(html:not(.dark)) {
+    .diff_change { color: #3a3aff; }
+    .diff_add    { color: #2a8000; }
+    .diff_remove { color: #a31212; }
+}
 
 .source_function {
     font-weight: bold;
