--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -128,6 +128,14 @@
     }
 }
 
+.row.collapsed {
+    cursor: pointer;
+}
+
+.row.collapsed > .cell {
+    cursor: pointer;
+}
+
 .cell span.lineNumber {
     display: inline-block;
 
