Add helpful placeholder text to CodeMirror elements

--- a/frontend/src/components/Editor/CodeMirror.module.scss
+++ b/frontend/src/components/Editor/CodeMirror.module.scss
@@ -13,6 +13,10 @@
         cursor: text;
     }
 
+    :global(.cm-placeholder) {
+        font-style: italic;
+    }
+
     :global(.cm-gutters),
     :global(.cm-content),
     :global(.cm-tooltip-hover) {
